# fresh-flask-demo

./: README.md
backend/: pyproject.toml
backend/src/: main.py
frontend/: deno.json
