[project]
name = "backend"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "lxizaxi", email = "USERNAME@users.noreply.github.com" }
]
dependencies = [
    "flask~=3.0.2",
    "flask-cors~=4.0.0",
    "types-flask-cors~=4.0.0.20240405",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
